# psytrax

./: .gitignore  README.md  app.py  benchmark.py  conda-environment.yml  environment.yml  extract_data.py  fit_all.py  pyproject.toml  requirements.txt  setup.py  test_race_model.py
data/: DAP007_data.npy  DAP009_data.npy  DAP011_data.npy  DAP013_data.npy  DAP014_data.npy  DAP015_data.npy  DAP017_data.npy  DAP019_data.npy  DAP022_data.npy  DAP023_data.npy  DAP024_data.npy  DAP027_data.npy  DAP028_data.npy  DAP031_data.npy  DAP033_data.npy  DAP035_data.npy  DAP037_data.npy  DAP039_data.npy  DAP044_data.npy  DAP048_data.npy  DAP050_data.npy  DAP051_data.npy  DAP053_data.npy  DAP059_data.npy  DAP060_data.npy  DAP069_data.npy
example_fits/: DAP009_race_fit.npy  DAP011_race_fit.npy  DAP013_race_fit.npy  DAP014_race_fit.npy  DAP015_race_fit.npy  DAP019_race_fit.npy  DAP023_race_fit.npy  DAP027_race_fit.npy  DAP028_race_fit.npy  DAP033_race_fit.npy  DAP035_race_fit.npy  DAP037_race_fit.npy  DAP039_race_fit.npy  DAP044_race_fit.npy  DAP048_race_fit.npy  DAP053_race_fit.npy  DAP060_race_fit.npy  DAP069_race_fit.npy
examples/: compare_models_DAP009.py  generate_dap011_docs_figures.py
psytrax/: __init__.py  _device.py  _execution.py  _hyper_opt.py  _jax_map.py  _likelihood.py  _map.py  fit.py
psytrax/_helper/: helperFunctions.py  invBlkTriDiag.py  jacHessCheck.py  memoize.py
psytrax/models/: __init__.py  ddm.py  ddm_approx.py  logistic.py  mlp.py  race.py
tests/: test_fit.py  test_models.py
